[gd_scene load_steps=12 format=2]

[ext_resource path="res://images/Asteroid-PNG-Isolated-Pic.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Moving_ast.gd" type="Script" id=2]
[ext_resource path="res://images/explosion3.png" type="Texture" id=3]
[ext_resource path="res://images/explosion4.png" type="Texture" id=4]
[ext_resource path="res://images/explosion5.png" type="Texture" id=5]
[ext_resource path="res://images/explosion1.png" type="Texture" id=6]
[ext_resource path="res://images/explosion2.png" type="Texture" id=7]
[ext_resource path="res://Music/Explosion_1.mp3" type="AudioStream" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 49.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 42.0
height = 2.0

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "Explosion",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Asteroid" type="RigidBody2D"]
collision_layer = 2
collision_mask = 3
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 4.5, 0.5 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 515, 638, 101, 121 )

[node name="Area2D" type="Area2D" parent="Sprite" groups=["astra"]]
position = Vector2( 0, 63 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D"]
position = Vector2( -4.5, -63.5 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 2 )

[node name="ExplosionAstra" type="AnimatedSprite" parent="."]
position = Vector2( -2, -4 )
scale = Vector2( 1.83962, 1.90385 )
frames = SubResource( 4 )
speed_scale = 2.0

[node name="Explosion_noise" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -20.0
mix_target = 1

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="area_entered" from="Sprite/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="animation_finished" from="ExplosionAstra" to="." method="_on_ExplosionAstra_animation_finished"]
